--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 
 .container-fluid {
     margin: 0 auto;
-    width: 70%;
+    width: 80%;
     text-align: center;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 .album-cover {
-    width: 55%;
+    width: 42%;
 }
 
 .buy-image {
@@ -48,8 +48,29 @@ body {
 .copyright {
     color: #4f4f4f;
 }
-/************* MEDIA QUERIES ***********************/
 
+
+.inner-container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.youtube-container {
+    width: 50%;
+    float: left;
+}
+
+.youtube-blurb {
+    width: 80%;
+    color: #4f4f4f;
+    text-align: left;
+    font-size: 0.75em;
+    margin-left: 30px;
+}
+
+
+
+/************* MEDIA QUERIES ***********************/
 
 @media(max-width: 767px) {
     .album-cover {
@@ -61,14 +82,26 @@ body {
     }
 }
 
-@media(max-width: 520px) {
+@media(max-width: 1900px) {
 
-    /* collapse menu at this width */
+    .inner-container {
+        text-align: center;
+    }
+
+    .youtube-container {
+        width: 560px;
+        margin: 0 auto;
+        float: none;
+    }
+
+    .youtube-blurb {
+        width: 100%;
+        margin-left: 30px;
+    }
 }
 
 
 /**************** BOOTSTRAP OVERRIDES *******************/
-
 
 .navbar {
     background-color: #000;
