--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ body {
     font-size: 20px;
 }
 
+.home-link {
+    display: inline;
+}
+
 .album-cover {
     width: 42%;
 }
@@ -55,11 +59,6 @@ body {
     margin: 0 auto;
 }
 
-.youtube-container {
-    width: 50%;
-    float: left;
-}
-
 .youtube-blurb {
     width: 80%;
     color: #4f4f4f;
@@ -68,7 +67,73 @@ body {
     margin-left: 30px;
 }
 
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
 
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.grid-container {
+    margin-top: 50px;
+    display: grid;
+    grid-gap: 1.5em;
+    grid-template-columns: repeat(3);
+    grid-template-rows: repeat(3);
+    grid-template-areas: 
+    "a a b"
+    "d c b"
+    "d e f";
+}
+
+.box1 {
+    grid-area: a;
+}
+
+.image1 {
+    grid-area: b;
+    text-align: center;
+    min-width: 100px;
+}
+
+.box2 {
+    grid-area: c;
+}
+
+.image2 {
+    grid-area: d;
+    min-width: 100px;
+}
+
+.box3 {
+    grid-area: f;
+}
+
+.box4 {
+    grid-area: e;
+    text-align: center;
+}
+
+.image-thumb {
+    width: 95%;
+    border: 3px solid #fff;
+}
+
+.badges {
+    text-align: center;
+}
 
 /************* MEDIA QUERIES ***********************/
 
@@ -118,7 +183,6 @@ body {
 }
 
 .navbar .nav li a,
-.navbar .nav li a:active,
 .navbar .nav li a:visited {
     text-decoration: none;
     color: #f5f5f5;
@@ -130,5 +194,17 @@ body {
 }
 
 .navbar .nav li:hover {
-    border-color: #b30001;
+    border-bottom: 1px solid #b30001;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    color: #f5f5f5;
+    background-color: transparent;
+}
+
+.navbar-default .navbar-nav>.active {
+    background-color: transparent;
+    border-bottom: 1px solid #b30001;
 }
